Add recipe picture to recipe heading
Added a crescent pizza slice under the recipe link.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>~Odin Recipes~</h1>
     <h1>Crescent Pizza</h1>
     <p>Find out how to make a delicious <strong>Crescent Pizza</strong> <a href="https://www.allrecipes.com/recipe/215435/crescent-pizza-pockets/">here!</a></p>
-    
+    <img src="./images/pizzapic.jpg" alt="A slice of crescent pizza" width="300">
     
 </body>
 </html>
