--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Crescent Pizza</h1>
     <p>Find out how to make a delicious <strong>Crescent Pizza</strong> <a href="https://www.allrecipes.com/recipe/215435/crescent-pizza-pockets/">here!</a></p>
     <img src="./images/pizzapic.jpg" alt="A slice of crescent pizza" width="300">
+    <p>Make perfect pizza pockets by wrapping pizza sauce, mozzarella, and pepperoni in crescent dough and baking until golden brown.</p>
     <h2>Ingredients</h2>
     <ul>
         <li>1 (8 ounce) can Pillsbury® refrigerated crescent dinner rolls</li>
