--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
         <li>½ cup sliced pepperoni</li>
         <li>1 teaspoon grated Parmesan cheese</li>
     </ul>
+    <h2>Cooking Steps</h2>
+    <ol>
+        <li>Heat oven to 375 degrees F. Unroll dough on cookie sheet and separate into 4 rectangles; press each into 6x4-inch rectangle, firmly pressing perforations to seal.</li>
+        <li>Spread 1 tablespoon pizza sauce on half of each rectangle to within 1 inch of edge. Sprinkle each with 3 tablespoons cheese; top with 6 slices pepperoni. Fold dough diagonally over filling; firmly press edges with fork to seal. Sprinkle each triangle with 1/4 teaspoon grated cheese. With fork, prick top of each to allow steam to escape.</li>
+        <li>Bake 13 to 15 minutes or until deep golden brown. Serve warm.</li>
+    </ol>
     
 </body>
 </html>
