Add additional recipes and main page links
Created 2 additional recipe pages to recipes folder and linked
to them on the main page.

--- a/index.html
+++ b/index.html
@@ -7,24 +7,13 @@
 </head>
 <body>
     <h1>~Odin Recipes~</h1>
-    <h1>Crescent Pizza</h1>
-    <p>Find out how to make a delicious <strong>Crescent Pizza</strong> <a href="https://www.allrecipes.com/recipe/215435/crescent-pizza-pockets/">here!</a></p>
-    <img src="./images/pizzapic.jpg" alt="A slice of crescent pizza" width="300">
-    <p>Make perfect pizza pockets by wrapping pizza sauce, mozzarella, and pepperoni in crescent dough and baking until golden brown.</p>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>1 (8 ounce) can Pillsbury® refrigerated crescent dinner rolls</li>
-        <li>¼ cup pizza sauce</li>
-        <li>¾ cup shredded mozzarella cheese</li>
-        <li>½ cup sliced pepperoni</li>
-        <li>1 teaspoon grated Parmesan cheese</li>
-    </ul>
-    <h2>Cooking Steps</h2>
-    <ol>
-        <li>Heat oven to 375 degrees F. Unroll dough on cookie sheet and separate into 4 rectangles; press each into 6x4-inch rectangle, firmly pressing perforations to seal.</li>
-        <li>Spread 1 tablespoon pizza sauce on half of each rectangle to within 1 inch of edge. Sprinkle each with 3 tablespoons cheese; top with 6 slices pepperoni. Fold dough diagonally over filling; firmly press edges with fork to seal. Sprinkle each triangle with 1/4 teaspoon grated cheese. With fork, prick top of each to allow steam to escape.</li>
-        <li>Bake 13 to 15 minutes or until deep golden brown. Serve warm.</li>
-    </ol>
+    <a href="./recipes/pizza.html">Crescent Pizza</a>
+    <br>
+    <br>
+    <a href="./recipes/padthai.html">Pad Thai</a>
+    <br>
+    <br>
+    <a href="./recipes/potpie.html">Pot Pie</a>
     
 </body>
 </html>
