--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Crescent Pizza</h1>
+    <a href="../index.html">Main Page</a>
     <p>Find out how to make a delicious <strong>Crescent Pizza</strong> <a href="https://www.allrecipes.com/recipe/215435/crescent-pizza-pockets/">here!</a></p>
     <img src="../images/pizzapic.jpg" alt="A slice of crescent pizza" width="300">
     <p>Make perfect pizza pockets by wrapping pizza sauce, mozzarella, and pepperoni in crescent dough and baking until golden brown.</p>
