Add pictures of recipes and their descriptions
Added recipe pictures and scaled them to 300 width and added short
descriptions of the recipe underneath the images of the recipe.

--- a/recipes/padthai.html
+++ b/recipes/padthai.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Pad Thai</h1>
     <a href="../index.html">Main Page</a>
+    <p>Find out how to make a delicious <strong>Pad Thai</strong> <a href="https://www.allrecipes.com/recipe/42968/pad-thai/">here!</a></p>
+    <img src="../images/padthaipic.jpg" alt="A picture of a delicious serving of Pad Thai!" width="300">
+    <p>This is a traditional pad thai recipe used by a friend's mother. You can use chicken, pork, beef, tofu, or a combination. You may want to start with less pepper and work your way up.</p>
 </body>
 </html>
