--- a/recipes/potpie.html
+++ b/recipes/potpie.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Holiday Ham Pot Pie</h1>
     <a href="../index.html">Main Page</a>
+    <p>Find out how to make a delicious <strong>Holiday Ham Pot Pie</strong> <a href="https://www.allrecipes.com/holiday-ham-pot-pies-recipe-8410845">here!</a></p>
+    <img src="../images/potpiepic.jpg" alt="A picture of a yummy Holiday Ham Pot Pie" width="300">
+    <p>These magnificent holiday ham pot pies feature a user-friendly, buttery, ancient hot water pastry crust, which is both sturdy and tender, and often functioned as an edible napkin for a hand-held pie. You can use leftover ham or ham purchased just for the recipe. Four 7-ounce ramekins are the perfect size for these pot pies.</p>
 </body>
 </html>
