Add recipes into list on main page
Added recipe links into an unordered list on the main page to make
for a cleaner look.

--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
 </head>
 <body>
     <h1>~Odin Recipes~</h1>
-    <a href="./recipes/pizza.html">Crescent Pizza</a>
-    <br>
-    <br>
-    <a href="./recipes/padthai.html">Pad Thai</a>
-    <br>
-    <br>
-    <a href="./recipes/potpie.html">Pot Pie</a>
+    <ul>
+        <li><a href="./recipes/pizza.html">Crescent Pizza</a></li>
+        <li><a href="./recipes/padthai.html">Pad Thai</a></li>
+        <li> <a href="./recipes/potpie.html">Pot Pie</a></li>
+       
+    </ul>
     
 </body>
 </html>
